prometheus-operator/alertmanager-ingress.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "prom-operator-alertmanager"
  namespace: "monitoring"
spec:
  ingressClassName: "nginx"
  rules:
    - host: "alertmanager.k3s"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "prom-operator-kube-prometh-alertmanager"
                port:
                  number: 9093
