prometheus-operator/grafana-ingress.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "prom-operator-grafana"
  namespace: "monitoring"
spec:
  ingressClassName: "nginx"
  rules:
    - host: "grafana.k3s"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "prom-operator-grafana"
                port:
                  number: 80
